--- a/kankan/pages/main/home.html
+++ b/kankan/pages/main/home.html
@@ -78,9 +78,17 @@
 							switch(e.index) {
 								case 0:
 									console.log("新しいはじめる方はこちら");
+									mui.openWindow({
+										id: 'reg',
+										url:'../login/reg.html'
+									});
 									break;
 								case 1:
 									console.log("登録済みの方はこちら");
+									mui.openWindow({
+										id: 'login',
+										url:'../login/login.html'
+									});
 									break;
 								default:
 									console.log("スキップ");
