--- a/kankan/pages/main/products/product_login.html
+++ b/kankan/pages/main/products/product_login.html
@@ -34,6 +34,7 @@
 			<!--page title end-->
 			<!--page main start-->
 			<div class="mui-page-content">
+			<form action="" method="post" name="publish" id="publish">
 				<div class="mui-scroll-wrapper">
 					<div class="mui-scroll">
 						<div class="mui-content kankan_jyimgbox">
@@ -64,10 +65,10 @@
 								     <h5 class="ka_proloh5 lang" data-locale="commodity_name"></h5>
 								    <ul class="mui-table-view">
 							            <li class="mui-table-view-cell">
-						                   <input type="text" class="lang" data-locale="commodity_namelength" id="productname" maxlength="40">
+						                   <input type="text" class="lang" data-locale="commodity_namelength" id="comm_name" name="comm_name" maxlength="40">
 							            </li>
 							            <li class="mui-table-view-cell">
-							                 <textarea  class="ka_noborder" maxlength="1000"></textarea>
+							                 <textarea  class="ka_noborder" maxlength="1000" id="comm_detail" name="comm_detail"></textarea>
 							            </li>
 							        </ul>
 							     </div>
@@ -80,6 +81,7 @@
 							                    	<span class="ka_proinfo lang" data-locale="commodity_sorts" ></span>
 							                    	<div class="mui-pull-right ka_bitian lang" data-locale="commodity_must" id="bitian1"></div>
 							                    	<div id='sortResult' class="ui-alert mui-pull-right ka_sortname"></div>
+							                    	<input type="hidden" name="classify_id" id="classify_id" value="" />
 							                </div>
 							                
 							            </li>
@@ -87,6 +89,7 @@
 							                <a class="mui-navigate-right" href="#productstaute" id="prostuat">
 							                     	<span class="ka_proinfo lang" data-locale="commodity_stuates"></span>
 							                     	<div class="mui-pull-right ka_bitian lang" data-locale="commodity_must"></div>
+							                     	<input type="hidden" name="comm_state" id="comm_state" value="" />
 							                </a>
 							            </li>
 							            <li class="mui-table-view-cell">
@@ -104,9 +107,12 @@
 							    	 <ul class="mui-table-view">
 							    	         <li class="mui-table-view-cell">
 							    	             <div class="ka_userbox">
-								    	            <div class="mui-pull-left ka_exchangered lang" data-locale="commodity_switch"></div>
-								    	            <div class="mui-pull-left ka_exchangegrey lang" data-locale="commodity_free"></div>
-								    	            <div class="mui-pull-left ka_exchangegrey lang" data-locale="commodity_pointbuy"></div>
+								    	            <div class="mui-pull-left ka_exchangegrey lang" data-locale="commodity_switch" id="exchbuybtn"></div>
+								    	            <input type="hidden" name="exchange" id="exchange" value="0" />
+								    	            <div class="mui-pull-left ka_exchangegrey lang" data-locale="commodity_pointbuy" id="pointbuybtn"></div>
+								    	             <input type="hidden" name="business" id="business" value="0" />
+								    	             <div class="mui-pull-left ka_exchangegrey lang" data-locale="commodity_free" id="freebuybtn"></div>
+								    	             <input type="hidden" name="gratis" id="gratis" value="0" />
 							    	            </div>
 							    	         </li>
 							    	     </ul>
@@ -115,7 +121,7 @@
 						<div class="ka_description lang" data-locale="commodity_forbidentext">
 						</div>
 						<div class="ka_userbox">
-							<button type="button" class="mui-btn mui-btn-red ka_prologsure lang"  data-locale="commodity_buttonsure" onclick="return publish()"></button>
+							<button type="button" class="mui-btn mui-btn-red ka_prologsure lang"  data-locale="commodity_buttonsure" onclick="return publishs()"></button>
 						</div>
 						<br/>
 						<div class="showimg">
@@ -123,6 +129,7 @@
 				        <div id="deltimg" style="display: none;"></div>
 				    </div>    
 				</div>
+			</form>
 			</div>
     </div>
 	 <!--productsataute page-->
@@ -138,18 +145,33 @@
 					<div class="mui-scroll">
 						<ul class="mui-table-view">
 					        <li class="mui-table-view-cell">
-					            <a class="mui-navigate-right" onclick="foundstuat(this)">
-					              	<span class="ka_sortfont" >全新</span>
+					            <a class="mui-pull-left" onclick="foundstuat(this)">
+					              	<span class="ka_sortfont">新品・未使用</span>
+					              	 <input type="hidden" name="stuate0" id="stuate0" value="0" />
 					            </a>
 					        </li>
 					        <li class="mui-table-view-cell">
-					            <a class="mui-navigate-right" onclick="foundstuat(this)">
-					            	   <span class="ka_sortfont">用了一年</span>
+					            <a class="mui-pull-left" onclick="foundstuat(this)">
+					            	   <span class="ka_sortfont">未使用に近い</span>
+					            	    <input type="hidden" name="stuate1" id="stuate1" value="1" />
 					            </a>
 					        </li>
 					        <li class="mui-table-view-cell">
-					            <a class="mui-navigate-right" onclick="foundstuat(this)">
-					             	  <span class="ka_sortfont">用了三年</span>
+					            <a class="mui-pull-left" onclick="foundstuat(this)">
+					             	  <span class="ka_sortfont">目立った傷や汚れなし</span>
+					             	   <input type="hidden" name="stuate2" id="stuate2" value="2" />
+					            </a>
+					        </li>
+					        <li class="mui-table-view-cell">
+					            <a class="mui-pull-left" onclick="foundstuat(this)">
+					             	  <span class="ka_sortfont">傷や汚れあり</span>
+					             	  <input type="hidden" name="stuate3" id="stuate3" value="3" />
+					            </a>
+					        </li>
+					        <li class="mui-table-view-cell">
+					            <a class="mui-pull-left" onclick="foundstuat(this)">
+					             	  <span class="ka_sortfont">全体的に状態が悪い)</span>
+					             	   <input type="hidden" name="stuate4" id="stuate4" value="4" />
 					            </a>
 					        </li>
 					    </ul>
@@ -186,8 +208,7 @@
 					showCityPickerButton.addEventListener('tap', function(event) {
 						cityPicker.show(function(items) {
 							cityResult.innerText =items[0].text + " " + items[1].text;
-							//return  false Can prevent the selection box off
-							//return false;
+							document.getElementById("classify_id").value=items[1].value;
 						});
 						document.getElementById("bitian1").style.display="none";
 					}, false);
@@ -224,13 +245,15 @@
 				//				console.log(e.detail.page.id + ' back');
 			});
 		})(mui);
-		function publish(){
+		function publishs(){
 			return confirm(TextMessage.publishsure)
 		}
 		//stuat value
 		function foundstuat(e){
 			var stuat=$(e).children("span").html();
+			var stuatenumber=$(e).children("input").val()
 			$("#prostuat div").html(stuat);
+			$("#comm_state").val(stuatenumber);
 			$("#prostuat div").removeClass("ka_bitian");
 			$("#prostuat div").addClass("ka_sortname");
 			$("#productstaute .ka_gaoliang").each(function(){
@@ -331,7 +354,6 @@
                     sure.onclick = function() {
                         mask.style.display = "none";
                         t.style.display = "none";
-                        //alert($(t).html());
                         var picdisp=$(".z_file").css("display");
                         if(picdisp=="none"){
                         	$(".z_file").show();
@@ -370,45 +392,33 @@
 						var size = event.size; // （Byte）
 						var width = event.width; // px
 						var height = event.height; // px
-						console.log(target);
 						uploadimage(target);
 					},function(error) {
 						alert("Compress error!"+error.message);
 				});
 			}
 			function uploadimage(path){
-				var num2=nums;
 				var targetimg=path;
-				var value=$("#"+num2).val();
-				if(value=="0"){
-					$("#"+num2).val(targetimg);
-				}
-				//imgappend(path);
-//				var params={
-//					"serial":num2,
-//					"imges":targetimg
-//				};
-				//console.log("imges:"+params.imges);
-				//console.log("num2:"+params.serial);
 				var server = "http://192.168.1.8:7998/commodity/release/upload/";
-                    //打开等待旋转提示按钮
+                    //open loading button
                     var wt=plus.nativeUI.showWaiting();
                     var task = plus.uploader.createUpload(server, {  
                         method: "post"  
                     }, function(t, status) {  
                         if(status == 200) { 
-                            alert("上传成功："+t.responseText);
-                                wt.close(); //关闭等待提示按钮
+                           console.log("upload success:"+t.responseText);
+                           Processing(t.responseText);
+                           wt.close(); 
                         }else{
-                            alert("上传失败："+status);
-                            wt.close();//关闭等待提示按钮
+                            console.log("upload error："+status);
+                            wt.close();
                         }
                     });  
-                    task.addFile(targetimg, {key:"imges"});  
-                    //添加其他参数
+                    //add parameter
                     task.addData("tokencheck","+GGzMiM28W8dy+XxzQAl4x3L5fHNACXjh/PqKa19BIs=70760a3f4cbcc375c67df5c75919adbe09b8aca4fc25fa6d7068bcd66169a108");
-                    task.addData("signcheck","1493201299377_273278f18ed1013e348c6b7c2fa405979401432d6ecd74a6e21800f4fb1646f2_4ed8e0895cbd09a1503277a0148274d10cbe333fc6fcc205ba6b30a7944e19d2");
-                    task.addData("serial",num2);
+                    task.addData("signcheck","1493268550092_20a022c5f0e5865ad60a8f804552d57955ddfb1531a6ca984137ab0ae4620af6_1d36ade608dc4f344c2d6f42496fc10dd30fcdd09d8139e6fbdb57a436c56d26");
+                    task.addData("serial",nums.toString());
+                    task.addFile(targetimg, {key:"image"});  
                     task.start(); 
 //				Repository.Commodity.imgupload(params, {
 //					ok: function(data) {
@@ -423,6 +433,20 @@
 //					}
 //				});
 			}
+			function Processing(results){
+				var data=JSON.parse(results);
+				var stautes=data.result.status;
+				console.log(stautes);
+				if(stautes=="OK"){
+					var imagesrc=data.result.data[1];
+					var value=$("#"+nums).val();
+					if(value=="0"){
+						$("#"+nums).val(imagesrc);
+					}
+				}else{
+					alert("image error:"+data.result.statuscode.image);
+				}
+			}
 			var nums=0;
 			function imgappend(localurl){
 				var flag=true;
@@ -433,7 +457,6 @@
 						break;
 					}
             	}
-				//alert("nums is "+nums);
 				var img = document.createElement("img");
                 img.setAttribute("src",localurl);
                 img.setAttribute("alt",nums);
@@ -477,6 +500,45 @@
 				filter: "image"
 			})
 		};
+		//buy way choose
+		/*exchange*/
+		document.getElementById('exchbuybtn').addEventListener('tap',function(e){
+			$("#exchange").val("1");
+			$("#exchbuybtn").removeClass("ka_exchangegrey");
+			$("#exchbuybtn").addClass("ka_exchangered");
+			if($("#gratis").val()=="1"){
+				$("#gratis").val("0");
+				$("#freebuybtn").removeClass("ka_exchangered");
+				$("#freebuybtn").addClass("ka_exchangegrey");
+			}
+		});
+		/*point*/
+		document.getElementById('pointbuybtn').addEventListener('tap',function(e){
+			$("#business").val("1");
+			$("#pointbuybtn").removeClass("ka_exchangegrey");
+			$("#pointbuybtn").addClass("ka_exchangered");
+			if($("#gratis").val()=="1"){
+				$("#gratis").val("0");
+				$("#freebuybtn").removeClass("ka_exchangered");
+				$("#freebuybtn").addClass("ka_exchangegrey");
+			}
+		});
+		/*free*/
+		document.getElementById('freebuybtn').addEventListener('tap',function(e){
+			$("#gratis").val("1");
+			$("#freebuybtn").removeClass("ka_exchangegrey");
+			$("#freebuybtn").addClass("ka_exchangered");
+			if($("#business").val()=="1"){
+				$("#business").val("0");
+				$("#pointbuybtn").removeClass("ka_exchangered");
+				$("#pointbuybtn").addClass("ka_exchangegrey");
+			}
+			if($("#exchange").val()=="1"){
+				$("#exchange").val("0");
+				$("#exchbuybtn").removeClass("ka_exchangered");
+				$("#exchbuybtn").addClass("ka_exchangegrey");
+			}
+		});
 	</script>
 
 </html>
