--- a/kankan/pages/main/products/detail.html
+++ b/kankan/pages/main/products/detail.html
@@ -29,11 +29,11 @@
 				<div class="mui-slider-group mui-slider-loop">
 					<!-- last -->
 					<div class="mui-slider-item mui-slider-item-duplicate firstimage">
-						<img src="">
+						<img src="" style="max-height: 239px;">
 					</div>
 					<!-- first -->
 					<div class="mui-slider-item mui-slider-item-duplicate lastimage">
-						<img src="">
+						<img src="" style="max-height: 239px;">
 					</div>
 				</div>
 				<div class="mui-slider-indicator">
@@ -313,7 +313,7 @@
 					$(".firstimage img").attr("src", imgsarr[0]);
 					$(".lastimage img").attr("src", imgsarr[la]);
 					htmlimg += '<div class="mui-slider-item sliderimg">';
-					htmlimg += '<img src="' + imgsarr[i] + '">';
+					htmlimg += '<img src="' + imgsarr[i] + '" style="max-height: 239px;">';
 					htmlimg += '</div>';
 					if(i==0){
 						var htmlfocus='<div class="mui-indicator mui-active"></div>';
@@ -380,6 +380,7 @@
 				var recomdlenght = recomendsarrs.length;
 				var recomendsobj = {};
 				var recomendaddhtml = ""; //add dom
+				var recomendaddfirsthtml="";
 				var c = 0;
 				for(var j = 0; j < recomdlenght; j++) {
 					var k = j + 1 * 1;
@@ -389,8 +390,8 @@
 					var recomdid = recomendsobj.commodity_id;
 					var advflag = recomendsobj.is_ad;
 					recomendhtml += '<li class="mui-table-view-cell mui-media mui-col-xs-3 detail">';
-					recomendhtml += '<a href="detail.html" id="' + recomdid + '">';
-					recomendhtml += '<img class="mui-media-object" src="' + recomdimg + '">';
+					recomendhtml += '<a href="detail.html" id="' + recomdid + '" class="ka_imgewh">';
+					recomendhtml += '<img class="mui-media-object ka_imgewh" src="' + recomdimg + '" style="width: 95px;height: 81px;">';
 					recomendhtml += '</a></li>';
 					var vall = k % 4;
 					if(vall == 0 || j == recomdlenght - 1) {
@@ -400,15 +401,20 @@
 						recomendhtml += '<div class="mui-slider-item sliderimg">';
 						recomendhtml += '<ul class="mui-table-view mui-grid-view">';
 					}
-					recomendaddhtml += '<li class="mui-table-view-cell mui-media mui-col-xs-3 detail">';
-					recomendaddhtml += '<a href="detail.html" id="' + recomdid + '">';
-					recomendaddhtml += '<img class="mui-media-object" src="' + recomdimg + '">';
-					recomendaddhtml += '</a></li>';
+					
 					if(j < 4) {
-						$("#firstremmondul").html(recomendaddhtml);
+						recomendaddfirsthtml += '<li class="mui-table-view-cell mui-media mui-col-xs-3 detail">';
+						recomendaddfirsthtml += '<a href="detail.html" id="' + recomdid + '" class="ka_imgewh">';
+						recomendaddfirsthtml += '<img class="mui-media-object" src="' + recomdimg + '" style="width: 95px;height: 81px;">';
+						recomendaddfirsthtml += '</a></li>';
+						$("#firstremmondul").html(recomendaddfirsthtml);
 					}
 					if(j > recomdlenght - 4) {
-						//$("#lastremmondul").html(recomendaddhtml);
+						recomendaddhtml += '<li class="mui-table-view-cell mui-media mui-col-xs-3 detail">';
+						recomendaddhtml += '<a href="detail.html" id="' + recomdid + '" class="ka_imgewh">';
+						recomendaddhtml += '<img class="mui-media-object" src="' + recomdimg + '" style="width: 95px;height: 81px;">';
+						recomendaddhtml += '</a></li>';
+						$("#lastremmondul").html(recomendaddhtml);
 					}
 				}
 				recomendhtml2 += recomendhtml;
@@ -422,6 +428,7 @@
 				var concernlenght = concernarrs.length;
 				var concernsobj = {};
 				var concernaddhtml = ""; //add dom
+				var concernlastaddhtml="";
 				for(var l = 0; l < concernlenght; l++) {
 					var m = l + 1 * 1;
 					var concernobj1 = JSON.stringify(concernarrs[l]);
@@ -429,8 +436,8 @@
 					var concernimg = concernsobj.commodity_photo_url;
 					var concernid = concernsobj.commodity_id;
 					concernhtml += '<li class="mui-table-view-cell mui-media mui-col-xs-3 detail">';
-					concernhtml += '<a href="detail.html" id="' + concernid + '">';
-					concernhtml += '<img class="mui-media-object" src="' + concernimg + '">';
+					concernhtml += '<a href="detail.html" id="' + concernid + '" class="ka_imgewh">';
+					concernhtml += '<img class="mui-media-object" src="' + concernimg + '" style="width: 95px;height: 81px;">';
 					concernhtml += '</a></li>';
 					var vallm = m % 4;
 					if(vallm == 0 || l == concernlenght - 1) {
@@ -440,16 +447,19 @@
 						concernhtml += '<div class="mui-slider-item sliderimg">';
 						concernhtml += '<ul class="mui-table-view mui-grid-view">';
 					}
-
-					concernaddhtml += '<li class="mui-table-view-cell mui-media mui-col-xs-3 detail">';
-					concernaddhtml += '<a href="detail.html" id="' + concernid + '">';
-					concernaddhtml += '<img class="mui-media-object" src="' + concernimg + '">';
-					concernaddhtml += '</a></li>';
 					if(l < 4) {
+						concernaddhtml += '<li class="mui-table-view-cell mui-media mui-col-xs-3 detail">';
+						concernaddhtml += '<a href="detail.html" id="' + concernid + '" class="ka_imgewh">';
+						concernaddhtml += '<img class="mui-media-object" src="' + concernimg + '" style="width: 95px;height: 81px;">';
+						concernaddhtml += '</a></li>';
 						$("#firstconcerul").html(concernaddhtml);
 					}
 					if(l > concernlenght - 4) {
-						$("#lastconcerul").html(concernaddhtml);
+						concernlastaddhtml += '<li class="mui-table-view-cell mui-media mui-col-xs-3 detail">';
+						concernlastaddhtml += '<a href="detail.html" id="' + concernid + '" class="ka_imgewh">';
+						concernlastaddhtml += '<img class="mui-media-object" src="' + concernimg + '" style="width: 95px;height: 81px;">';
+						concernlastaddhtml += '</a></li>';
+						$("#lastconcerul").html(concernlastaddhtml);
 					}
 
 				}
