--- a/kankan/pages/main/logisticslist.html
+++ b/kankan/pages/main/logisticslist.html
@@ -206,7 +206,7 @@
 				//console.log("l_com_id:"+l_com_id+"l_com_name"+l_com_name);
 				var html = new Util.StringBuilder();
 				html.append('<ul class="delivery-info"><li class="delivery-icon">')
-					.appendFormat('<a href="#" onclick="location.href=' + "'{0}'" + '"><img height="100%" width="100%" src="../../images/car.png"/></a>', l_com_url)
+					.appendFormat('<a  onclick="gohref('+"'{0}'"+')"><img height="100%" width="100%" src="../../images/car.png"/></a>', l_com_url)
 					.appendFormat('</li><li class="delivery-detail"><font color="#000000" size="2">{0}<br>{1}<br>{2}</font></li></ul>', l_com_name, l_com_pro, l_com_phone)
 					.append('<ul class="delivery-list"><li class="delivery-grid">')
 					.appendFormat('<div class="delivery-detail-call" onclick="showDialog(' + "'{0}'" + ",'{1}'" + ",'{2}'" + ');">', l_com_name, l_com_phone, l_com_id)
@@ -220,6 +220,9 @@
 				var mainpage=plus.webview.getLaunchWebview();
 					mui.fire(mainpage,'gohome');
 			});
+		}
+		function gohref(urls){
+			plus.runtime.openURL(urls);
 		}
 		mui.plusReady(function() {
 			var params = {};
